Fix profile tags and first/last name alignment

--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -2661,11 +2661,6 @@ h2.section, h2.name {
       }
     }
 
-h2.name {
-  margin: 90px 0px 10px;
-  line-height: 32px;
-}
-
     @media (max-width: 992px) {
       h2.name {
         padding: 0px 30px;
